Core: missing find-package

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -844,6 +844,7 @@ find_package(glm REQUIRED)
 find_package(tclap REQUIRED)
 find_package(roaring REQUIRED)
 find_package(units REQUIRED)
+find_package(utf8cpp CONFIG REQUIRED)
 if(APPLE)
    find_library(CORESERVICES_LIBRARY CoreServices)
 endif()
