--- a/modules/volume/CMakeLists.txt
+++ b/modules/volume/CMakeLists.txt
@@ -1,8 +1,10 @@
 ivw_module(Volume)
 
 set(HEADER_FILES
+    include/inviwo/volume/processors/centerline.h
     include/inviwo/volume/processors/concatvolumes.h
     include/inviwo/volume/processors/correlateslices.h
+    include/inviwo/volume/processors/imagepadding.h
     include/inviwo/volume/processors/volumevoronoisegmentation.h
     include/inviwo/volume/volumemodule.h
     include/inviwo/volume/volumemoduledefine.h
@@ -10,8 +12,10 @@ set(HEADER_FILES
 ivw_group("Header Files" ${HEADER_FILES})
 
 set(SOURCE_FILES
+    src/processors/centerline.cpp
     src/processors/concatvolumes.cpp
     src/processors/correlateslices.cpp
+    src/processors/imagepadding.cpp
     src/processors/volumevoronoisegmentation.cpp
     src/volumemodule.cpp
 )
