Qt/Various: bugfixes found when updating workspaces. Refactoring of The consoleWidget to use a custom model and to add item after the current event is done. This enables adding several lines in one go which greatly speeds up the logging.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,7 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
@@ -15,5 +13,5 @@ trim_trailing_whitespace = true
 
 
 [*]
-spelling_languagess = en-us
+spelling_languagess = en-US
 spelling_exclusion_path = ./tools/inviwo.dict
