--- a/.github/workflows/msvc-analysis.yml
+++ b/.github/workflows/msvc-analysis.yml
@@ -6,7 +6,7 @@
 # Find more information at:
 # https://github.com/microsoft/msvc-code-analysis-action
 
-name: Microsoft C++ Code Analysis
+name: Inviwo MSVC Code Analysis
 
 on:
   push:
@@ -25,28 +25,15 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Install Chocolatey
-      if: runner.os == 'Windows'
-      shell: bash
-      run: |
-        choco install doxygen.install 
-        choco install nsis
-        choco install tinytex
-        GP=`cygpath -u $GITHUB_PATH` 
-        
-        echo "/c/Program Files/doxygen/bin" >> $GP
-        echo "/c/Program Files (x86)/NSIS" >> $GP
-        echo "/c/tools/TinyTeX/bin/win32" >> $GP
-
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.11'
         architecture: 'x64'
     
     - name: Install Python Modules 
       shell: bash
-      run: pip3 install numpy Sphinx sphinx-rtd-theme recommonmark
+      run: pip3 install numpy
     
     - name: Clone VCPKG
       uses: actions/checkout@v2
@@ -68,7 +55,7 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: 6.2.3
+        version: 6.5.2
         dir: ${{ github.workspace }}
     
     - name: Clone Inviwo
@@ -87,10 +74,10 @@ jobs:
     - name: Setup C++ Log matchers
       uses: Trass3r/setup-cpp@v1
 
-    - name: Build
-      timeout-minutes: 360
-      shell: bash
-      run: cmake --build build --config Release --parallel --target ALL_BUILD
+    #- name: Build
+    #  timeout-minutes: 360
+    #  shell: bash
+    #  run: cmake --build build --config Release --parallel --target ALL_BUILD
 
     - name: Initialize MSVC Code Analysis
       uses: microsoft/msvc-code-analysis-action@04825f6d9e00f87422d6bf04e1a38b1f3ed60d99
