--- a/.github/workflows/msvc-analysis.yml
+++ b/.github/workflows/msvc-analysis.yml
@@ -39,6 +39,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: 'microsoft/vcpkg'
+        fetch-depth: 0
         path: 'vcpkg' # The cmake vcpkg present expects vcpkg to be next to the inviwo source folder
             
     - name: 'Setup NuGet Credentials'
