--- a/modules/hdf5/CMakeLists.txt
+++ b/modules/hdf5/CMakeLists.txt
@@ -109,26 +109,41 @@ if (NOT IVW_USE_EXTERNAL_HDF5)
     ivw_default_install_targets(${h5-targets})
 
 else()
-    find_package(hdf5 REQUIRED)
-    if(BUILD_SHARED_LIBS)
-        target_link_libraries(inviwo-module-hdf5 
-            PUBLIC 
-                hdf5::hdf5-shared 
-                hdf5::hdf5_hl-shared 
-                hdf5::hdf5_cpp-shared 
-                hdf5::hdf5_hl_cpp-shared
-        )
+    # Try vcpkg-provided Findhdf5
+    find_package(hdf5 QUIET)
+    if(HDF5_FOUND)
+        if(BUILD_SHARED_LIBS)
+            target_link_libraries(inviwo-module-hdf5
+                PUBLIC
+                    hdf5::hdf5-shared
+                    hdf5::hdf5_hl-shared
+                    hdf5::hdf5_cpp-shared
+                    hdf5::hdf5_hl_cpp-shared
+            )
+        else()
+            target_link_libraries(inviwo-module-hdf5
+                PUBLIC
+                    hdf5::hdf5-static
+                    hdf5::hdf5_hl-static
+                    hdf5::hdf5_cpp-static
+                    hdf5::hdf5_hl_cpp-static
+            )
+        endif()
+        ivw_vcpkg_install(hdf5 MODULE HDF5)
+        set(version ${HDF5_VERSION_STRING})
     else()
-        target_link_libraries(inviwo-module-hdf5 
-            PUBLIC 
-                hdf5::hdf5-static 
-                hdf5::hdf5_hl-static 
-                hdf5::hdf5_cpp-static 
-                hdf5::hdf5_hl_cpp-static
-        )
+        # Try cmake standard FindHDF5
+        if(NOT BUILD_SHARED_LIBS)
+           set(HDF5_USE_STATIC_LIBRARIES ON)
+        endif()
+        find_package(HDF5 REQUIRED COMPONENTS C CXX)
+        target_link_libraries(inviwo-module-hdf5
+            PUBLIC
+            hdf5::hdf5
+            hdf5::hdf5_cpp
+            )
+          set(version ${HDF5_VERSION})
     endif()
-    ivw_vcpkg_install(hdf5 MODULE HDF5)
-    set(version ${HDF5_VERSION_STRING})
 endif()
 
 
